--- a/views/_partials/_navbar.ejs
+++ b/views/_partials/_navbar.ejs
@@ -1,7 +1,7 @@
 <nav id="navbar__container">
 
   <div class="centerpiece__container">
-    <img id="logo" src="./images/logo_stove.png" />
+    <img id="logo" src="./images/logo_light.png" />
   </div>
 
 </nav>
