--- a/styles/sass/_menu-item.scss
+++ b/styles/sass/_menu-item.scss
@@ -5,6 +5,8 @@
   height: 200px;
   width: 200px;
   margin-bottom: 10px;
+  margin-right: 10px;
+  margin-left: 10px;
   display: inline-block;
   text-align: center;
   background-color: white;
