--- a/styles/sass/_cart.scss
+++ b/styles/sass/_cart.scss
@@ -82,6 +82,10 @@
       background-color: #ececec;
       color: black
     }
+    #cart__total-cost {
+      background-color: #3e2d24;
+      color: white;
+    }
     .cart__submit-button { /* <button> */
       cursor: pointer;
       height: 50px;
