--- a/views/_partials/_navbar.ejs
+++ b/views/_partials/_navbar.ejs
@@ -3,5 +3,7 @@
   <div class="centerpiece__container">
     <img id="logo" src="./images/logo_light.png" />
   </div>
-
+  <div class="cart__toggle-button__container">
+    <i class="cart__toggle-button fa fa-bars" aria-hidden="true"></i>
+  </div>
 </nav>
