--- a/styles/sass/_cart.scss
+++ b/styles/sass/_cart.scss
@@ -95,3 +95,7 @@
       border: 0px;
       border-top: 1px solid black;
     }
+
+    .cart__submit-button:focus { /* <button> */
+      outline: none;
+    }
