Added context on menu item select

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -792,6 +792,9 @@ li {
   opacity: 1;
   cursor: pointer; }
 
+.selected {
+  border: 1px solid white; }
+
 .show--block {
   display: block !important; }
 
